; ModuleID = '/home/carl/AnghaBench/postgres/src/interfaces/ecpg/compatlib/extr_informix.c_rdefmtdate.c'
source_filename = "/home/carl/AnghaBench/postgres/src/interfaces/ecpg/compatlib/extr_informix.c_rdefmtdate.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@errno = common dso_local global i32 0, align 4
@ECPG_INFORMIX_ENOSHORTDATE = common dso_local global i32 0, align 4
@ECPG_INFORMIX_ENOTDMY = common dso_local global i32 0, align 4
@ECPG_INFORMIX_BAD_DAY = common dso_local global i32 0, align 4
@ECPG_INFORMIX_BAD_MONTH = common dso_local global i32 0, align 4
@ECPG_INFORMIX_BAD_YEAR = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @rdefmtdate(i32* %0, i8* %1, i8* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i8*, align 8
  store i32* %0, i32** %5, align 8
  store i8* %1, i8** %6, align 8
  store i8* %2, i8** %7, align 8
  store i32 0, i32* @errno, align 4
  %8 = load i32*, i32** %5, align 8
  %9 = load i8*, i8** %6, align 8
  %10 = load i8*, i8** %7, align 8
  %11 = call i64 @PGTYPESdate_defmt_asc(i32* %8, i8* %9, i8* %10)
  %12 = icmp eq i64 %11, 0
  br i1 %12, label %13, label %14

13:                                               ; preds = %3
  store i32 0, i32* %4, align 4
  br label %26

14:                                               ; preds = %3
  %15 = load i32, i32* @errno, align 4
  switch i32 %15, label %24 [
    i32 129, label %16
    i32 130, label %18
    i32 128, label %18
    i32 132, label %20
    i32 131, label %22
  ]

16:                                               ; preds = %14
  %17 = load i32, i32* @ECPG_INFORMIX_ENOSHORTDATE, align 4
  store i32 %17, i32* %4, align 4
  br label %26

18:                                               ; preds = %14, %14
  %19 = load i32, i32* @ECPG_INFORMIX_ENOTDMY, align 4
  store i32 %19, i32* %4, align 4
  br label %26

20:                                               ; preds = %14
  %21 = load i32, i32* @ECPG_INFORMIX_BAD_DAY, align 4
  store i32 %21, i32* %4, align 4
  br label %26

22:                                               ; preds = %14
  %23 = load i32, i32* @ECPG_INFORMIX_BAD_MONTH, align 4
  store i32 %23, i32* %4, align 4
  br label %26

24:                                               ; preds = %14
  %25 = load i32, i32* @ECPG_INFORMIX_BAD_YEAR, align 4
  store i32 %25, i32* %4, align 4
  br label %26

26:                                               ; preds = %24, %22, %20, %18, %16, %13
  %27 = load i32, i32* %4, align 4
  ret i32 %27
}

declare dso_local i64 @PGTYPESdate_defmt_asc(i32*, i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
